// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@dysonic/dy-cli-cmd-create should create a monorepo project when project and dest dir are provided: monorepo scaffold 1`] = `
Object {
  ".editorconfig": "root = true

[*]
charset = utf-8
indent_style = space
indent_size = 2
end_of_line = lf
insert_final_newline = true
trim_trailing_whitespace = true
",
  ".eslintignore": "__template__
dist
coverage
packages/*/test/__fixtures__/**
packages/**/templates/**
",
  ".eslintrc.js": "module.exports = {
  parser: '@typescript-eslint/parser',
  parserOptions: {
    ecmaVersion: 2020,
    sourceType: 'module',
    ecmaFeatures: {
      jsx: true,
    },
  },
  settings: {
    'import/resolver': {
      node: {
        extensions: ['.js', '.jsx', '.ts', '.tsx'],
      },
    },
    'import/extensions': ['.js', '.jsx', '.ts', '.tsx'],
  },
  extends: [
    'plugin:@typescript-eslint/recommended',
    'prettier',
    'plugin:prettier/recommended',
  ],
  plugins: ['import'],
  rules: {
    'no-shadow': 'warn',
    'no-console': process.env.NODE_ENV === 'production' ? 'warn' : 'off',
    'no-debugger': process.env.NODE_ENV === 'production' ? 'error' : 'off',
    '@typescript-eslint/explicit-member-accessibility': [
      'off',
      { overrides: { constructors: 'no-public', accessors: 'off' } },
    ],
    '@typescript-eslint/no-explicit-any': 'off',
    '@typescript-eslint/no-non-null-assertion': 'error',
    '@typescript-eslint/no-empty-function': 'off',
    // https://github.com/typescript-eslint/typescript-eslint/blob/main/packages/eslint-plugin/docs/rules/ban-types.md
    '@typescript-eslint/ban-types': 'off',
    '@typescript-eslint/no-empty-interface': 'off',
    // https://github.com/typescript-eslint/typescript-eslint/blob/main/packages/eslint-plugin/docs/rules/explicit-module-boundary-types.md
    '@typescript-eslint/explicit-module-boundary-types': 'off',
    '@typescript-eslint/no-unused-vars': 'warn',
    '@typescript-eslint/no-this-alias': [
      'warn',
      {
        allowDestructuring: false, // Disallow \`const { props, state } = this\`; true by default
        allowedNames: ['self'], // Allow \`const self = this\`; \`[]\` by default
      },
    ],
    'no-duplicate-imports': 'error',
    // 'import/no-cycle': ['warn', { maxDepth: process.env.NODE_ENV === 'production' ? 2 : 1 }],
    'import/no-self-import': 'error',
    'import/no-extraneous-dependencies': [
      'error',
      {
        // 配置白名单
        devDependencies: ['**/scripts/**', '**/test/**', 'tools/**'],
        peerDependencies: ['packages/*/src/**', '**/test/**'],
      },
    ],
  },
  // eslint 规则覆盖
  overrides: [
    {
      files: ['tools/**', '**/scripts/**'],
      rules: {
        'no-console': 'off',
        '@typescript-eslint/no-var-requires': 'off',
      },
    },
  ],
};
",
  ".github/workflows/release.yml": "name: Release

on:
  workflow_dispatch:
    inputs:
      releaseType:
        description: Select the release bump to prepare
        required: true
        type: choice
        options:
          - patch
          - minor
          - major
      prerelease:
        description: Enter prerelease mode before versioning
        required: false
        type: boolean
        default: false

concurrency: \${{ github.workflow }}-\${{ github.ref_name }}

permissions:
  contents: write
  pull-requests: write

jobs:
  release-pr:
    name: Create Release Pull Request
    runs-on: ubuntu-latest
    steps:
      - name: Checkout
        uses: actions/checkout@v4

      - name: Setup pnpm
        uses: pnpm/action-setup@v4
        with:
          version: 10

      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: 20
          cache: 'pnpm'

      - name: Install Dependencies
        run: pnpm install

      - name: Prepare Release Changes
        shell: bash
        run: |
          args=\\"--\${{ inputs.releaseType }}\\"
          if [ \\"\${{ inputs.prerelease }}\\" = \\"true\\" ]; then
            args=\\"$args --beta\\"
          fi
          pnpm exec dy-cli version $args

      - name: Create Release Pull Request
        uses: peter-evans/create-pull-request@v6
        with:
          branch: release/\${{ inputs.releaseType }}
          commit-message: chore(release): prepare \${{ inputs.releaseType }} release
          title: Release: \${{ inputs.releaseType }}
          body: |
            This PR was prepared by the dy-cli release workflow.

            - Release type: \`\${{ inputs.releaseType }}\`
            - Prerelease mode: \`\${{ inputs.prerelease }}\`
",
  ".gitignore": ".idea
.vscode
.history
.DS_Store
.claude

# Dependency directories
node_modules/

# Logs
npm-debug.log*
yarn-debug.log*
yarn-error.log*
lerna-debug.log*

# Coverage directory used by tools like istanbul
coverage

!packages/*/test/__fixtures__/**
dist
tmp/
",
  ".husky/_/.gitignore": "*",
  ".husky/_/husky.sh": "#!/bin/sh
if [ -z \\"$husky_skip_init\\" ]; then
  debug () {
    if [ \\"$HUSKY_DEBUG\\" = \\"1\\" ]; then
      echo \\"husky (debug) - $1\\"
    fi
  }

  readonly hook_name=\\"$(basename \\"$0\\")\\"
  debug \\"starting $hook_name...\\"

  if [ \\"$HUSKY\\" = \\"0\\" ]; then
    debug \\"HUSKY env variable is set to 0, skipping hook\\"
    exit 0
  fi

  if [ -f ~/.huskyrc ]; then
    debug \\"sourcing ~/.huskyrc\\"
    . ~/.huskyrc
  fi

  export readonly husky_skip_init=1
  sh -e \\"$0\\" \\"$@\\"
  exitCode=\\"$?\\"

  if [ $exitCode != 0 ]; then
    echo \\"husky - $hook_name hook exited with code $exitCode (error)\\"
  fi

  exit $exitCode
fi
",
  ".husky/pre-commit": "#!/bin/sh
. \\"$(dirname \\"$0\\")/_/husky.sh\\"

npx lint-staged
",
  ".npmrc": "shamefully-hoist=true
//registry.npmjs.org/:_authToken=\${NPM_TOKEN}
",
  ".prettierignore": "__template__
dist
coverage
",
  ".prettierrc": "{
  \\"semi\\": true,
  \\"singleQuote\\": true,
  \\"printWidth\\": 100,
  \\"tabWidth\\": 2,
  \\"trailingComma\\": \\"all\\"
}
",
  "LICENSE": "MIT License

Copyright (c) 2024 dysonjs

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \\"Software\\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\"AS IS\\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
",
  "README.md": "# demo-app

Generated by \`dy-cli\` for a monorepo workflow.

## Commands

\`\`\`bash
pnpm install
pnpm exec dy-cli add button
pnpm run build
pnpm run test
pnpm run version
pnpm run release
\`\`\`
",
  "README_ZH.md": "# demo-app

这是一个由 \`dy-cli\` 初始化的 monorepo 项目。

## 常用命令

\`\`\`bash
pnpm install
pnpm exec dy-cli add button
pnpm run build
pnpm run test
pnpm run version
pnpm run release
\`\`\`
",
  "dy.config.ts": "import type { ExternalRunCommandsConfig } from '@dysonic/dy-cli';

export default {
  project: {
    type: 'monorepo',
    packageDir: 'packages',
    versionStrategy: 'fixed',
  },
  commands: {
    create: {
      defaultTemplateType: 'monorepo',
      templates: {
      monorepo: {
        label: 'Monorepo',
        description: 'Create a workspace-based project scaffold.',
      },
      single: {
        label: 'Single repo',
        description: 'Create a single-package project scaffold.',
      },
      },
    },
    add: {
      destDir: 'packages',
    },
    install: {
      npmClient: 'pnpm',
    },
    build: {
      mode: 'production',
      umd: {
        name: 'DemoApp',
      },
    },
    test: {
      config: './jest.config.js',
    },
    version: {
      betaTag: 'beta',
    },
    publish: {
      access: 'public',
      betaTag: 'beta',
      workspaceConcurrency: 8,
    },
  },
} satisfies ExternalRunCommandsConfig;
",
  "jest.config.js": "module.exports = {
  testTimeout: 30000,
  setupFilesAfterEnv: ['jest-sinon'],
  preset: 'ts-jest',
  testEnvironment: 'jsdom',
  testEnvironmentOptions: {
    runScripts: 'dangerously',
    resources: 'usable',
  },
  moduleFileExtensions: ['js', 'jsx', 'ts', 'tsx', 'json'],
  modulePathIgnorePatterns: ['<rootDir>/.*/__mocks__'],
  collectCoverageFrom: ['<rootDir>/src/**/*.[jt]s?(x)', '!<rootDir>/src/**/*.d.ts'],
  coverageThreshold: {
    global: {
      lines: 90,
      statements: 90,
    },
  },
  coverageReporters: ['lcov', 'text', 'json-summary'],
  coverageDirectory: 'coverage',
  testMatch: ['<rootDir>/test/**/*.test.[jt]s?(x)'],
  globals: {
    'ts-jest': {
      tsconfig: '<rootDir>/tsconfig.json',
    },
  },
};
",
  "package.json": "{
  \\"name\\": \\"demo-app\\",
  \\"private\\": true,
  \\"license\\": \\"MIT\\",
  \\"workspaces\\": [
    \\"packages/*\\"
  ],
  \\"packageManager\\": \\"pnpm@10.8.0\\",
  \\"scripts\\": {
    \\"add\\": \\"dy-cli add\\",
    \\"build\\": \\"dy-cli build\\",
    \\"build:types\\": \\"dy-cli build --types\\",
    \\"build:umd\\": \\"dy-cli build --umd\\",
    \\"lint\\": \\"eslint '*/**/*.{js,ts,jsx,tsx}'\\",
    \\"prepare\\": \\"husky install\\",
    \\"prettier\\": \\"prettier --write .\\",
    \\"release\\": \\"dy-cli publish\\",
    \\"release:beta\\": \\"dy-cli publish --beta\\",
    \\"test\\": \\"dy-cli test\\",
    \\"test:coverage\\": \\"dy-cli test --coverage\\",
    \\"version\\": \\"dy-cli version\\",
    \\"version:beta\\": \\"dy-cli version --beta\\",
    \\"version:beta:exit\\": \\"dy-cli version --beta-exit\\"
  },
  \\"lint-staged\\": {
    \\"**/*.{js,ts,jsx,tsx}\\": [
      \\"prettier --write\\",
      \\"cross-env NODE_ENV='production' eslint --fix\\"
    ]
  },
  \\"engines\\": {
    \\"node\\": \\">=18.20.8\\"
  },
  \\"devDependencies\\": {
    \\"@types/jest\\": \\"~26.0.24\\",
    \\"@types/node\\": \\"~16.18.126\\",
    \\"@typescript-eslint/eslint-plugin\\": \\"~6.21.0\\",
    \\"@typescript-eslint/parser\\": \\"~6.21.0\\",
    \\"cross-env\\": \\"~7.0.3\\",
    \\"@dysonic/dy-cli\\": \\"<cliVersion>\\",
    \\"eslint\\": \\"~7.32.0\\",
    \\"eslint-config-prettier\\": \\"~8.10.0\\",
    \\"eslint-plugin-import\\": \\"~2.31.0\\",
    \\"eslint-plugin-prettier\\": \\"~3.4.0\\",
    \\"husky\\": \\"~7.0.1\\",
    \\"jest\\": \\"~27.5.1\\",
    \\"jest-sinon\\": \\"~1.1.0\\",
    \\"lint-staged\\": \\"~11.2.6\\",
    \\"prettier\\": \\"~2.8.8\\",
    \\"rimraf\\": \\"~3.0.2\\",
    \\"ts-jest\\": \\"~27.1.5\\",
    \\"typescript\\": \\"~5.8.3\\"
  },
  \\"browserslist\\": [
    \\"defaults\\"
  ]
}
",
  "packages/demo-app/package.json": "{
  \\"name\\": \\"@dysonic/demo-app\\",
  \\"version\\": \\"0.0.0\\",
  \\"license\\": \\"MIT\\",
  \\"description\\": \\"\\",
  \\"main\\": \\"dist/index.cjs.js\\",
  \\"module\\": \\"dist/index.esm.js\\",
  \\"types\\": \\"dist/index.d.ts\\",
  \\"browser\\": \\"dist/index.umd.js\\",
  \\"files\\": [
    \\"dist\\"
  ],
  \\"sideEffects\\": false,
  \\"publishConfig\\": {
    \\"registry\\": \\"https://registry.npmjs.org\\"
  },
  \\"scripts\\": {
    \\"clean\\": \\"rimraf dist && rimraf coverage && rimraf node_modules\\",
    \\"prebuild\\": \\"rimraf dist\\"
  }
}
",
  "packages/demo-app/src/index.ts": "export {};
",
  "packages/demo-app/test/index.test.ts": "test('title', () => {});
",
  "packages/demo-app/tsconfig.json": "{
  \\"extends\\": \\"../../tsconfig.json\\",
  \\"compilerOptions\\": {
    \\"outDir\\": \\"dist\\",
    \\"module\\": \\"esnext\\"
  },
  \\"include\\": [\\"src\\", \\"test\\"]
}
",
  "tsconfig.json": "{
  \\"compilerOptions\\": {
    \\"allowJs\\": false,
    \\"baseUrl\\": \\".\\",
    \\"experimentalDecorators\\": true,
    \\"emitDecoratorMetadata\\": true,
    \\"esModuleInterop\\": true,
    \\"jsx\\": \\"react\\",
    \\"lib\\": [\\"esnext\\", \\"dom\\", \\"dom.iterable\\"],
    \\"module\\": \\"esnext\\",
    \\"moduleResolution\\": \\"node\\",
    \\"paths\\": {
      \\"@dysonic/demo-app\\": [\\"packages/demo-app/src\\"]
    },
    \\"preserveSymlinks\\": true,
    \\"resolveJsonModule\\": true,
    \\"rootDir\\": \\".\\",
    \\"strict\\": true,
    \\"strictPropertyInitialization\\": false,
    \\"target\\": \\"esnext\\",
    \\"types\\": [\\"jest\\", \\"node\\"]
  }
}
",
}
`;

exports[`@dysonic/dy-cli-cmd-create should create a single package project when project is provided: single scaffold 1`] = `
Object {
  ".editorconfig": "root = true

[*]
charset = utf-8
indent_style = space
indent_size = 2
end_of_line = lf
insert_final_newline = true
trim_trailing_whitespace = true
",
  ".eslintignore": "dist
coverage
test/__fixtures__/**
",
  ".eslintrc.js": "module.exports = {
  parser: '@typescript-eslint/parser',
  parserOptions: {
    ecmaVersion: 2020,
    sourceType: 'module',
  },
  settings: {
    'import/resolver': {
      node: {
        extensions: ['.js', '.jsx', '.ts', '.tsx'],
      },
    },
    'import/extensions': ['.js', '.jsx', '.ts', '.tsx'],
  },
  extends: [
    'plugin:@typescript-eslint/recommended',
    'prettier',
    'plugin:prettier/recommended',
  ],
  plugins: ['import'],
  rules: {
    'no-shadow': 'warn',
    'no-console': process.env.NODE_ENV === 'production' ? 'warn' : 'off',
    'no-debugger': process.env.NODE_ENV === 'production' ? 'error' : 'off',
    '@typescript-eslint/explicit-member-accessibility': [
      'off',
      { overrides: { constructors: 'no-public', accessors: 'off' } },
    ],
    '@typescript-eslint/no-explicit-any': 'off',
    '@typescript-eslint/no-non-null-assertion': 'error',
    '@typescript-eslint/no-empty-function': 'off',
    '@typescript-eslint/ban-types': 'off',
    '@typescript-eslint/no-empty-interface': 'off',
    '@typescript-eslint/explicit-module-boundary-types': 'off',
    '@typescript-eslint/no-unused-vars': 'warn',
    '@typescript-eslint/no-this-alias': [
      'warn',
      {
        allowDestructuring: false,
        allowedNames: ['self'],
      },
    ],
    'no-duplicate-imports': 'error',
    'import/no-self-import': 'error',
    'import/no-extraneous-dependencies': [
      'error',
      {
        devDependencies: ['**/test/**', '*.config.js', '.eslintrc.js', 'dy.config.ts'],
      },
    ],
  },
  overrides: [
    {
      files: ['*.js'],
      rules: {
        '@typescript-eslint/no-var-requires': 'off',
      },
    },
  ],
};
",
  ".github/workflows/release.yml": "name: Release

on:
  workflow_dispatch:
    inputs:
      releaseType:
        description: Select the release bump to prepare
        required: true
        type: choice
        options:
          - patch
          - minor
          - major
      prerelease:
        description: Enter prerelease mode before versioning
        required: false
        type: boolean
        default: false

concurrency: \${{ github.workflow }}-\${{ github.ref_name }}

permissions:
  contents: write
  pull-requests: write

jobs:
  release-pr:
    name: Create Release Pull Request
    runs-on: ubuntu-latest
    steps:
      - name: Checkout
        uses: actions/checkout@v4

      - name: Setup pnpm
        uses: pnpm/action-setup@v4
        with:
          version: 10

      - name: Setup Node.js
        uses: actions/setup-node@v4
        with:
          node-version: 20
          cache: 'pnpm'

      - name: Install Dependencies
        run: pnpm install

      - name: Prepare Release Changes
        shell: bash
        run: |
          args=\\"--\${{ inputs.releaseType }}\\"
          if [ \\"\${{ inputs.prerelease }}\\" = \\"true\\" ]; then
            args=\\"$args --beta\\"
          fi
          pnpm exec dy-cli version $args

      - name: Create Release Pull Request
        uses: peter-evans/create-pull-request@v6
        with:
          branch: release/\${{ inputs.releaseType }}
          commit-message: chore(release): prepare \${{ inputs.releaseType }} release
          title: Release: \${{ inputs.releaseType }}
          body: |
            This PR was prepared by the dy-cli release workflow.

            - Release type: \`\${{ inputs.releaseType }}\`
            - Prerelease mode: \`\${{ inputs.prerelease }}\`
",
  ".gitignore": ".idea
.vscode
.history
.DS_Store
.claude

node_modules
coverage
dist
",
  ".husky/_/.gitignore": "*
",
  ".husky/_/husky.sh": "#!/bin/sh
if [ -z \\"$husky_skip_init\\" ]; then
  debug () {
    if [ \\"$HUSKY_DEBUG\\" = \\"1\\" ]; then
      echo \\"husky (debug) - $1\\"
    fi
  }

  readonly hook_name=\\"$(basename \\"$0\\")\\"
  debug \\"starting $hook_name...\\"

  if [ \\"$HUSKY\\" = \\"0\\" ]; then
    debug \\"HUSKY env variable is set to 0, skipping hook\\"
    exit 0
  fi

  if [ -f ~/.huskyrc ]; then
    debug \\"sourcing ~/.huskyrc\\"
    . ~/.huskyrc
  fi

  export readonly husky_skip_init=1
  sh -e \\"$0\\" \\"$@\\"
  exitCode=\\"$?\\"

  if [ $exitCode != 0 ]; then
    echo \\"husky - $hook_name hook exited with code $exitCode (error)\\"
  fi

  exit $exitCode
fi
",
  ".husky/pre-commit": "#!/bin/sh
. \\"$(dirname \\"$0\\")/_/husky.sh\\"

npx lint-staged
",
  ".npmrc": "shamefully-hoist=true
//registry.npmjs.org/:_authToken=\${NPM_TOKEN}
",
  ".prettierignore": "dist
coverage
",
  ".prettierrc": "{
  \\"semi\\": true,
  \\"singleQuote\\": true,
  \\"printWidth\\": 100,
  \\"tabWidth\\": 2,
  \\"trailingComma\\": \\"all\\"
}
",
  "README.md": "# demo-app

Generated by \`dy-cli\` for a single-package workflow.

## Commands

\`\`\`bash
pnpm install
pnpm run lint
pnpm run prettier
pnpm run build
pnpm run test
pnpm exec dy-cli version --set 0.0.1
pnpm run release:dry-run
\`\`\`

## Release

The generated project includes \`.github/workflows/release.yml\` for preparing release pull requests.
Set \`NPM_TOKEN\` in your CI or local environment before publishing.
",
  "dy.config.ts": "import type { ExternalRunCommandsConfig } from '@dysonic/dy-cli';

export default {
  project: {
    type: 'single',
  },
  commands: {
    create: {
      defaultTemplateType: 'single',
      templates: {
      monorepo: {
        label: 'Monorepo',
        description: 'Create a workspace-based project scaffold.',
      },
      single: {
        label: 'Single repo',
        description: 'Create a single-package project scaffold.',
      },
      },
    },
    build: {
      mode: 'production',
      umd: {
        name: 'DemoApp',
      },
    },
    test: {
      config: './jest.config.js',
    },
    version: {
      betaTag: 'beta',
    },
    publish: {
      access: 'public',
      betaTag: 'beta',
    },
  },
} satisfies ExternalRunCommandsConfig;
",
  "jest.config.js": "module.exports = {
  preset: 'ts-jest',
  testEnvironment: 'node',
  moduleFileExtensions: ['js', 'jsx', 'ts', 'tsx', 'json'],
  collectCoverageFrom: ['<rootDir>/src/**/*.[jt]s?(x)', '!<rootDir>/src/**/*.d.ts'],
  coverageReporters: ['lcov', 'text', 'json-summary'],
  coverageDirectory: 'coverage',
  testMatch: ['<rootDir>/test/**/*.test.[jt]s?(x)'],
  globals: {
    'ts-jest': {
      tsconfig: '<rootDir>/tsconfig.json',
    },
  },
};
",
  "package.json": "{
  \\"name\\": \\"demo-app\\",
  \\"private\\": false,
  \\"version\\": \\"0.0.0\\",
  \\"license\\": \\"MIT\\",
  \\"main\\": \\"dist/index.cjs.js\\",
  \\"module\\": \\"dist/index.esm.js\\",
  \\"types\\": \\"dist/index.d.ts\\",
  \\"browser\\": \\"dist/index.umd.js\\",
  \\"files\\": [
    \\"dist\\"
  ],
  \\"packageManager\\": \\"pnpm@10.8.0\\",
  \\"scripts\\": {
    \\"build\\": \\"dy-cli build\\",
    \\"build:types\\": \\"dy-cli build --types\\",
    \\"build:umd\\": \\"dy-cli build --umd\\",
    \\"lint\\": \\"eslint src test dy.config.ts jest.config.js .eslintrc.js --ext .js,.jsx,.ts,.tsx\\",
    \\"prepare\\": \\"husky install\\",
    \\"prettier\\": \\"prettier --write .\\",
    \\"test\\": \\"dy-cli test\\",
    \\"test:coverage\\": \\"dy-cli test --coverage\\",
    \\"release\\": \\"dy-cli build && dy-cli build --types && dy-cli build --umd && dy-cli publish\\",
    \\"release:dry-run\\": \\"dy-cli build && dy-cli build --types && dy-cli build --umd && dy-cli publish --dry-run\\",
    \\"release:beta\\": \\"dy-cli build && dy-cli build --types && dy-cli build --umd && dy-cli publish --tag beta\\",
    \\"release:beta:dry-run\\": \\"dy-cli build && dy-cli build --types && dy-cli build --umd && dy-cli publish --tag beta --dry-run\\",
    \\"version\\": \\"dy-cli version\\",
    \\"version:beta\\": \\"dy-cli version --beta\\",
    \\"version:beta:exit\\": \\"dy-cli version --beta-exit\\"
  },
  \\"lint-staged\\": {
    \\"**/*.{js,ts,jsx,tsx}\\": [
      \\"prettier --write\\",
      \\"cross-env NODE_ENV=production eslint --fix\\"
    ]
  },
  \\"engines\\": {
    \\"node\\": \\">=18.20.8\\"
  },
  \\"devDependencies\\": {
    \\"@types/jest\\": \\"~26.0.24\\",
    \\"@types/node\\": \\"~16.18.126\\",
    \\"@typescript-eslint/eslint-plugin\\": \\"~6.21.0\\",
    \\"@typescript-eslint/parser\\": \\"~6.21.0\\",
    \\"cross-env\\": \\"~7.0.3\\",
    \\"@dysonic/dy-cli\\": \\"<cliVersion>\\",
    \\"eslint\\": \\"~7.32.0\\",
    \\"eslint-config-prettier\\": \\"~8.10.0\\",
    \\"eslint-plugin-import\\": \\"~2.31.0\\",
    \\"eslint-plugin-prettier\\": \\"~3.4.0\\",
    \\"husky\\": \\"~7.0.1\\",
    \\"jest\\": \\"~27.5.1\\",
    \\"lint-staged\\": \\"~11.2.6\\",
    \\"prettier\\": \\"~2.8.8\\",
    \\"ts-jest\\": \\"~27.1.5\\",
    \\"typescript\\": \\"~5.8.3\\"
  }
}
",
  "src/index.ts": "export function bootstrap() {
  return 'demo-app';
}
",
  "test/index.test.ts": "test('title', () => {});
",
  "tsconfig.json": "{
  \\"compilerOptions\\": {
    \\"target\\": \\"ES2019\\",
    \\"module\\": \\"CommonJS\\"
  },
  \\"include\\": [\\"src\\", \\"test\\"]
}
",
}
`;
